# taxi_demand_predictor

./: .gitignore  pyproject.toml
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  training_pipeline.yaml
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_to_time_series.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboostmodel.ipynb  08_lightgbm_model.ipynb  09_light_gbm_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuening.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb  backfill_experiment.py  experiment.ipynb  feature_experiment.py  inference_experiment.py  transform_time_series_to_features_and_target.ipynb
scripts/: backfill_feature_group.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  model.py  model_registry_api.py  monitoring.py  paths.py
