[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tushar Rohilla <tusharrohilla70#gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
