[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tushar Rohilla <tusharrohilla70#gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "^1.5.3"  # Compatible version for numpy < 2.0.0
pyarrow = "^18.1.0"
tqdm = "^4.67.1"
plotly = "^5.24.1"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
hopsworks = "4.1.4"
optuna = "^4.1.0"
python-dotenv = "^1.0.1"
confluent-kafka = "^2.7.0"
geopandas = "^1.0.1"
comet-ml = "^3.35.3"
fire = "^0.5.0"
discordwebhook = "^1.0.3"
retry = "^0.9.2"
numpy = "^1.23.5"  # Specified version to avoid incompatibility with pandas



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
